Fixed nav bar alignment issue on mobile.

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -2,10 +2,10 @@ $navbar-blue: #23c4ff;
 $navbar-green: #92D050;
 $navbar-red: #EC4959;
 
-// # symbols are deprecated in data urls so RGBA is used for the toggler icon.
+// # symbols are deprecated in data urls so RGBA is needed for the toggler icon.
 $navbar-green-rgba: rgba($navbar-green, 0.99);
 
-nav {
+nav.navbar-expand-sm {
     background-color: $darkgrey;
 
     .navbar-brand {
@@ -24,20 +24,39 @@ nav {
         }
     }
 
-    .current-link-brace {
+    .current-link-brace, .not-current-link-brace {
         font-family: $console-font;
         font-size: 2em;
+    }
+
+    .current-link-brace {
         color: $navbar-red;
     }
 
-    a {
-        line-height: 2em;
-        font-size: 1.2em;
+    // Display a starting curly brace for mobiles so the menu items in the navbar are correctly aligned.
+    .not-current-link-brace {
+        // Hide the curly brace against the background.
+        color: $darkgrey;
+
+        @media(min-width: 576px) {
+            display: none;
+        }
     }
 
-    .nav-item {
-        &.nav-link {
-            color: $navbar-green;
+    .outer-nav-link {
+        display:flex;
+        flex-direction: row;
+
+        .nav-item {
+            &.nav-link {
+                color: $navbar-green;
+                line-height: 2em;
+                font-size: 1.2em;
+
+                &:hover {
+                   color: white;
+                }
+            }
         }
     }
 }
